<resources>
    <string name="app_name">MyMVPDemo3</string>

    <!--网络相关 -->
    <string name="text_check_internet">请检查网络</string>
    <string name="text_wait_try">请稍后重试</string>

    <!--登陆界面 -->
    <string name="login_username_tv">用户名</string>
    <string name="login_username_ev">请输入用户名</string>
    <string name="login_password_tv">密码</string>
    <string name="login_password_ev">请输入密码</string>
    <string name="login_login_btn">登陆</string>

    <!--dialog相关 -->
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_left_cancel">取消</string>
    <string name="dialog_right_sure">确定</string>

    <!--相机相关-->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片…</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
