<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.freemud.app.mvp.demo.view.activity.LoginActivity">

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_username_ev" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_password_ev" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="loginBtn"
        android:text="@string/login_login_btn" />
</LinearLayout>
