<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/bg_white_round_5"
        android:gravity="center_horizontal"
        android:minHeight="180dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/common_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_80px"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:textColor="@color/first_font_color"
            android:textSize="@dimen/sp_34px" />

        <View style="@style/line_width_full_height_1dp" />

        <TextView
            android:id="@+id/common_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_marginBottom="24dip"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip"
            android:layout_marginTop="24dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/second_font_color"
            android:textSize="@dimen/sp_26px" />

        <View
            android:id="@+id/dialog_line"
            style="@style/line_width_full_height_1dp" />

        <LinearLayout
            android:id="@+id/common_dialog_btnLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_80px"
            android:orientation="horizontal">

            <Button
                android:id="@+id/common_dialog_cancel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_left_btn_bg"
                android:text="@string/dialog_left_cancel"
                android:textColor="@color/tab_text_normal" />

            <View
                android:id="@+id/common_dialog_btnLine"
                style="@style/line_height_full_width_1dp" />

            <Button
                android:id="@+id/common_dialog_ok"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dialog_right_btn_bg"
                android:text="@string/dialog_right_sure"
                android:textColor="@color/tab_text_normal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>